mongoid config for heroku

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -66,5 +66,16 @@ test:
         - localhost:27017
       options:
         consistency: :strong
+<% if ENV['MONGOLAB_URI'] %>
+  <% uri = URI.parse(ENV['MONGOLAB_URI']) %>
 production:
-  uri: <%= ENV['MONGOLAB_URI'] %>
+  <<: *defaults
+  sessions:
+    default:
+      <<: *default_session
+      database: <%= uri.path.sub('/','') %>
+      username: <%= uri.user %>
+      password: <%= uri.password %>
+      hosts:
+        - <%= uri.host %>:<%= uri.port %>
+<% end %>
